--- a/Welcome.html
+++ b/Welcome.html
@@ -4,9 +4,115 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome Message</title>
+    <title>Basic Input Type</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Welocme to the HTML5</h1>
+    <form>
+        <header class="headerContainer"><h1>Html5 Input Form</h1></header>
+        <div>
+            <label for="text">Text Input For Name: </label>
+            <input type="text" id="text" name="text">
+            <error-output class="text-error" for="text"></error-output>
+        </div>
+        <div>
+            <label for="pwd">Password Input Type: </label>
+            <input type="password" id="pwd" name="pwd">
+            <error-output class="password-error" for="pwd"></error-output>
+        </div>
+    </div>
+    <div>
+        <label for="email">Email Input Type: </label>
+        <input type="email" id="email" name="email">
+        <error-output class="email-error" for="email"></error-output>
+    </div>
+        <div>
+            <label for="url">Url Input Type: </label>
+            <input type="url" id="url" name="url">
+        </div>
+        <div>
+            <label for="number">Number Input Type: </label>
+            <input type="number" id="number" name="number">
+        </div>
+        <div>
+            <label for="tel">Tel Input Type: </label>
+            <input type="tel" id="tel" name="tel">
+            <error-output class="tel-error" for="tel"></error-output>
+        </div>
+        <div>
+            <label for="search">Search Input Type: </label>
+            <input type="search" id="search" name="search">
+        </div>
+        <div>
+            <label for="party">Choose a Date and Time: </label>
+            <input type="datetime-local" id="party" name="bday">
+            <span class="validity"></span>
+        </div>
+        <div>
+            <label for="salary">Choose Your Salary: </label>
+            <input type="range" id="salary" min="10000" max="500000" step="1000" value="40000">
+            <output id="salary-output">40000</output>
+        </div>
+        <div>
+            <button>Submit</button>
+        </div>
+    </form>
+
+    <script>
+        /* UC1- First name starts with Cap and has minimum 3 characters */
+        const text = document.querySelector('#text');
+        const textError =document.querySelector('.text-error');
+        text.addEventListener('input',function() {
+            let nameRegex=RegExp('^[A-Z]{1}[a-z]{2,}$');
+            if (nameRegex.test(text.value))
+                textError.textContent="";
+            else 
+                textError.textContent="Name is Incorrect";
+        });
+        let salary=document.querySelector('#salary');
+        let output=document.querySelector('#salary-output');
+        output.textContent=salary.value;
+        salary.addEventListener('input',function()
+        {
+            output.textContent=salary.value;
+        });
+       /* UC-2 Email has 3 mandatory parts (abc, bl & co) and 2 optional (xyz & in) with precise @ and . positions */
+       let email=document.querySelector('#email');
+        let emailError=document.querySelector('.email-error');
+        email.addEventListener('input',function()
+        {
+            let emailRegex=RegExp('^([abc]+)(\.[a-z0-9_\+\-]+)?@([bl]+)\.([co]{2,4})(\.[a-z]{2,})?$');
+            if(emailRegex.test(email.value))
+                   emailError.textContent="";
+            else
+                    emailError.textContent="Email is invalid";
+        });
+        /*UC3- Country code follow by space and 10 digit number */
+        let phone=document.querySelector('#tel');
+        let phoneError=document.querySelector('.tel-error');
+        phone.addEventListener('input',function()
+        {
+            let phoneRegex=RegExp('^[1-9]{2}?([ ])[0-9]{10}$');
+            if(phoneRegex.test(phone.value))
+                    phoneError.textContent="";
+            else
+                    phoneError.textContent="Phone number is invalid";
+        });
+        /* Rule1 – minimum 8 Characters
+          Rule2 – Should have atleast 1 Upper Case
+          Rule3 – Should have atleast 1 numeric number in the password
+          Rule4 – Has atleat 1 Special Character */
+        let password=document.querySelector('#pwd');
+        let passwordError=document.querySelector('.password-error');
+        password.addEventListener('input',function()
+        {
+            //let passwordRegex=RegExp('^[a-zA-Z0-9]{8,}$');
+            let passwordRegex=RegExp('^(?=.*?[A-Z])(?=.*?[a-z])(?=.*?[0-9])(?=.*?[#?!@$%^&*-]).{8,}$');
+            if(passwordRegex.test(password.value))
+                    passwordError.textContent="";
+            else
+                    passwordError.textContent="Password is invalid";
+        });
+    </script>
 </body>
 </html>
